--- a/kadai4.html
+++ b/kadai4.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="urf-8">
-        <title>演習課題4-1：自動販売機（クラス）</title>
+        <title>演習課題4：自動販売機（クラス）</title>
     </head>
     <body>
         <script>
