--- a/kadai4.html
+++ b/kadai4.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="urf-8">
+        <meta charset="utf-8">
         <title>演習課題4：自動販売機（クラス）</title>
     </head>
     <body>
+        <h1 id="msg">自動販売機システム</h1>
+        <table id="item_area" border="1"></table>
         <script>
             // 商品一覧を記録する連想配列の配列
             const items =  [
@@ -39,20 +41,36 @@
                 }
                 
                 // 商品購入の関数
-                buyItem() {
-                    console.log("商品番号: "+this.id+", 商品名: "+this.name+"を購入します。");
-                    // ここにコードを書く
+                buyItem() {          
+                    if (this.stock >= 1) { 
+                        console.log("商品番号: "+this.id+", 商品名: "+this.name+"を購入します。");
+                        // ここにコードを書く
+                        // 購入による商品の在庫削減処理
+                        // 在庫用のエレメントを抽出し、HTML内の個数を更新
+                    } else console.log(this.name+"は商品の在庫がないため購入できません。");
                 }
             } // End of Item class
 
-            const item_list = new Array(items.length); // 商品リストの作成
-            for (let i=0; i<items.length; i++) {
-                // ループ処理の中でItemクラスのコンストラクタを呼び出す
-                // ここにコードを書く
-            }
+            // 商品テーブルのエレメント抽出
+            const itemArea = document.getElementById("item_area");
+            itemArea.innerHTML += "<tr><th>商品名</th><th>金額</th><th>在庫数</th><th>購入</th></tr>";
 
+            // 配列のオブジェクト作成
+            const item_list = new Array(items.length);
+            const btn = new Array(items.length);
+
+            // ここにコード書く
+            // 商品オブジェクトの生成
+            // 商品表の作成
+
+            // クリックイベント時の購入処理の設定
+            for (let i=0; i<item_list.length; i++) {
+                // 上のコードが完成したら、以下のコメントを外す
+                //document.getElementById("button"+item_list[i].id).onclick = () => {
+                //    item_list[i].buyItem();
+                //}
+            }
             Item.showItemList(item_list);
-            item_list[7].buyItem();
 
         </script>
     </body>
@@ -60,7 +78,15 @@
 <!-- 
 期待される出力例
 -----------------
-商品は以下の8種類です。
+id: 1, name: 緑茶, 140円, 残り5個
+id: 2, name: 水, 100円, 残り14個
+id: 3, name: オレンジジュース, 150円, 残り7個
+id: 4, name: リンゴジュース, 150円, 残り9個
+id: 5, name: 炭酸水, 120円, 残り1個
+id: 6, name: サイダー, 160円, 残り3個
+id: 7, name: コーヒー, 170円, 残り8個
+id: 8, name: 紅茶, 140円, 残り6個
+商品は以下の9種類です。
 商品番号: 1, 商品名: 緑茶, 金額: 140, 在庫数: 5
 商品番号: 2, 商品名: 水, 金額: 100, 在庫数: 14
 商品番号: 3, 商品名: オレンジジュース, 金額: 150, 在庫数: 7
@@ -70,37 +96,13 @@
 商品番号: 7, 商品名: コーヒー, 金額: 170, 在庫数: 8
 商品番号: 8, 商品名: 紅茶, 金額: 140, 在庫数: 6
 
-商品番号: 3, 商品名: オレンジジュースを購入します。
-商品は以下の8種類です。
-商品番号: 1, 商品名: 緑茶, 金額: 140, 在庫数: 5
-商品番号: 2, 商品名: 水, 金額: 100, 在庫数: 14
-商品番号: 3, 商品名: オレンジジュース, 金額: 150, 在庫数: 6
-商品番号: 4, 商品名: リンゴジュース, 金額: 150, 在庫数: 9
-商品番号: 5, 商品名: 炭酸水, 金額: 120, 在庫数: 1
-商品番号: 6, 商品名: サイダー, 金額: 160, 在庫数: 3
-商品番号: 7, 商品名: コーヒー, 金額: 170, 在庫数: 8
-商品番号: 8, 商品名: 紅茶, 金額: 140, 在庫数: 6
-
+商品番号: 2, 商品名: 水を購入します。
+残りは13個です。
+商品番号: 2, 商品名: 水を購入します。
+残りは12個です。
+商品番号: 4, 商品名: リンゴジュースを購入します。
+残りは8個です。
 商品番号: 5, 商品名: 炭酸水を購入します。
-商品は以下の8種類です。
-商品番号: 1, 商品名: 緑茶, 金額: 140, 在庫数: 5
-商品番号: 2, 商品名: 水, 金額: 100, 在庫数: 14
-商品番号: 3, 商品名: オレンジジュース, 金額: 150, 在庫数: 6
-商品番号: 4, 商品名: リンゴジュース, 金額: 150, 在庫数: 9
-商品番号: 5, 商品名: 炭酸水, 金額: 120, 在庫数: 0
-商品番号: 6, 商品名: サイダー, 金額: 160, 在庫数: 3
-商品番号: 7, 商品名: コーヒー, 金額: 170, 在庫数: 8
-商品番号: 8, 商品名: 紅茶, 金額: 140, 在庫数: 6
-
-商品番号: 5, 商品名: 炭酸水を購入します。
-在庫がありません。
-商品は以下の8種類です。
-商品番号: 1, 商品名: 緑茶, 金額: 140, 在庫数: 5
-商品番号: 2, 商品名: 水, 金額: 100, 在庫数: 14
-商品番号: 3, 商品名: オレンジジュース, 金額: 150, 在庫数: 6
-商品番号: 4, 商品名: リンゴジュース, 金額: 150, 在庫数: 9
-商品番号: 5, 商品名: 炭酸水, 金額: 120, 在庫数: 0
-商品番号: 6, 商品名: サイダー, 金額: 160, 在庫数: 3
-商品番号: 7, 商品名: コーヒー, 金額: 170, 在庫数: 8
-商品番号: 8, 商品名: 紅茶, 金額: 140, 在庫数: 6
+残りは0個です。
+炭酸水は商品の在庫がないため購入できません。
 -->
