update: 課題4-1～4-3のコード箇所提示

--- a/kadai4.html
+++ b/kadai4.html
@@ -36,7 +36,7 @@
                     console.log("商品は以下の" + Item.number + "種類です。");
 
                     // 配列の内容を項目毎に出力
-                    // ここにコードを書く
+                    // 課題4-1. ここにコードを書く
                     console.log(""); // 空行の出力
                 }
                 
@@ -44,8 +44,10 @@
                 buyItem() {          
                     if (this.stock >= 1) { 
                         console.log("商品番号: "+this.id+", 商品名: "+this.name+"を購入します。");
-                        // ここにコードを書く
+                        // 課題4-2. ここにコードを書く
                         // 購入による商品の在庫削減処理
+                        
+                        // 課題4-3. ここにコードを書く
                         // 在庫用のエレメントを抽出し、HTML内の個数を更新
                     } else console.log(this.name+"は商品の在庫がないため購入できません。");
                 }
@@ -59,13 +61,16 @@
             const item_list = new Array(items.length);
             const btn = new Array(items.length);
 
-            // ここにコード書く
+            // 課題4-1. ここにコード書く
             // 商品オブジェクトの生成
+
+            // 課題4-2. ここにコードを書く
             // 商品表の作成
 
             // クリックイベント時の購入処理の設定
             for (let i=0; i<item_list.length; i++) {
-                // 上のコードが完成したら、以下のコメントを外す
+                // 課題4-3. ここにコードを書く
+                // 課題4-1, 4-2のコードが完成したら、以下のコメントを外す
                 //document.getElementById("button"+item_list[i].id).onclick = () => {
                 //    item_list[i].buyItem();
                 //}
