update: 文字コード修正

--- a/kadai4_ans.html
+++ b/kadai4_ans.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="urf-8">
-        <title>演習課題4-1：自動販売機（クラス）</title>
+        <meta charset="utf-8">
+        <title>演習課題4：自動販売機（クラス）</title>
     </head>
     <body>
         <h1 id="msg">自動販売機システム</h1>
