--- a/kadai4_ans.html
+++ b/kadai4_ans.html
@@ -5,7 +5,7 @@
         <title>演習課題4：自動販売機（クラス）</title>
     </head>
     <body>
-        <h1 id="msg">自動販売機システム</h1>
+        <h1 id="vending-machine">自動販売機システム</h1>
         <table id="item_area" border="1"></table>
         <script>
             // 商品一覧を記録する連想配列の配列
